[gd_scene load_steps=5 format=3 uid="uid://dn6vnolqprgtd"]

[ext_resource type="Script" path="res://Scene/main_menu.gd" id="1_kerhm"]
[ext_resource type="Theme" uid="uid://doj56ai31tnfa" path="res://Scene/Main_UI_Theme.tres" id="1_kngsl"]
[ext_resource type="AudioStream" uid="uid://fi2po3t7ng76" path="res://entities/bubble/big_bubble/menu loop.mp3" id="3_qyyu4"]
[ext_resource type="Texture2D" uid="uid://bw57u1rb5nxny" path="res://Assets/cover1.png" id="4_oqcqt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -184.5
offset_right = 297.0
offset_bottom = 184.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kerhm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.651074
anchor_top = -6.41821
anchor_right = 1.8736
anchor_bottom = -1.04305
offset_left = -316.262
offset_top = 1016.82
offset_right = 104.084
offset_bottom = 113.384
scale = Vector2(0.88, 0.88)
pivot_offset = Vector2(960, 540)
texture = ExtResource("4_oqcqt")
metadata/_edit_use_anchors_ = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 119.5
offset_right = 351.0
offset_bottom = 194.5
scale = Vector2(1.45262, 0.795984)
theme = ExtResource("1_kngsl")

[node name="Button" type="Button" parent="Panel2"]
layout_mode = 0
offset_right = 199.0
offset_bottom = 75.0
text = "
"

[node name="Label" type="Label" parent="Panel2/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.6441
offset_top = -9.86125
offset_right = 30.3559
offset_bottom = 10.1387
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.717954, 1.02491)
text = "Play"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 206.5
offset_right = 351.0
offset_bottom = 281.5
scale = Vector2(0.612617, 0.635983)
theme = ExtResource("1_kngsl")

[node name="Button" type="Button" parent="Panel3"]
layout_mode = 0
offset_right = 199.0
offset_bottom = 75.0
text = "
"

[node name="Label" type="Label" parent="Panel3/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.9417
offset_top = -10.7697
offset_right = 19.0583
offset_bottom = 9.23029
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.29054, 1.21359)
text = "Options"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 319.0
offset_top = 206.5
offset_right = 518.0
offset_bottom = 281.5
scale = Vector2(0.612617, 0.635983)
theme = ExtResource("1_kngsl")

[node name="Button" type="Button" parent="Panel4"]
layout_mode = 0
offset_right = 199.0
offset_bottom = 75.0
text = "
"

[node name="Label" type="Label" parent="Panel4/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.9417
offset_top = -10.7697
offset_right = 19.0583
offset_bottom = 9.23029
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.29054, 1.21359)
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(3, 3)
stream = ExtResource("3_qyyu4")
autoplay = true

[connection signal="pressed" from="Panel2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel3/Button" to="." method="_on_button_pressed_op"]
[connection signal="pressed" from="Panel4/Button" to="." method="_on_button_pressed_quit"]
